# Flow-Bloch-T1-mapping-cpp

./: .gitignore  CMakeLists.txt  LICENSE  build_run.sh  cmake.sh  install_requirements.sh  nohup.out  readme.md  run.py  run_noflow.py
include/: argparse.hpp
python/: EXP_masked_MOLLI_data_0_0.02.npz  EXP_masked_MOLLI_data_0_0.3.npz  EXP_masked_MOLLI_data_0_4.npz  EXP_masked_MOLLI_data_1000_5x5.npz  EXP_masked_MOLLI_data_1200_5x5.npz  EXP_masked_MOLLI_data_1300_5x5.npz  EXP_masked_MOLLI_data_1400_5x5.npz  EXP_masked_MOLLI_data_1500.npz  EXP_masked_MOLLI_data_1500_5x5.npz  EXP_masked_MOLLI_data_1600.npz  EXP_masked_MOLLI_data_1600_5x5.npz  EXP_masked_MOLLI_data_1700.npz  EXP_masked_MOLLI_data_1700_5x5.npz  EXP_masked_MOLLI_data_fast_1500_5x5.npz  EXP_masked_MOLLI_data_fast_1500_5x5_0_5.npz  EXP_masked_MOLLI_data_fast_longz.npz  EXP_masked_MOLLI_data_slow_longz.npz  GenSeq_MOLLI.py  GenSeq_Pulse_SINC.py  GenSeq_SSFP.py  MOLLI_fit.py  MOLLI_result.ipynb  SINC_pulse_analysis.py  SSFP_result.ipynb  T1_fit.ipynb  T1_fit_2.ipynb  T1_fit_pixelwise.ipynb  compress_jupyter.py  data_processing.ipynb  data_processing_extremely_slow.ipynb  data_processing_fast.ipynb  data_processing_fast_longz.ipynb  data_processing_slow.ipynb  data_processing_slow_longz.ipynb  load_cppimg.py  seq_visualization.ipynb
sequences_MOLLI/: MOLLI_533_TR2.8_FA10_FOV320_K64_center_first.yaml  MOLLI_533_TR2.8_FA20_FOV320_K64_center_first.yaml  MOLLI_533_TR2.8_FA35_FOV256_K64_thick8.yaml  MOLLI_533_TR2.8_FA35_FOV256_K64_thick8_Gz_dt20.yaml  MOLLI_533_TR2.8_FA35_FOV256_K64_thick8_center_first.yaml  MOLLI_533_TR2.8_FA35_FOV256_K64_thick8_dt20.yaml  MOLLI_533_TR2.8_FA35_FOV256_K64_thick8_dt20_center_first.yaml  MOLLI_533_dt_TR2.8_FA10_FOV320_K64_center_first.yaml  MOLLI_533_dt_TR2.8_FA20_FOV320_K64_center_first.yaml  TEST_SSFP_533_TR2.8_FA35_FOV256_K64_thick8_Gz_dt20.yaml  TEST_SSFP_533_TR2.8_FA35_FOV256_K64_thick8_dt20.yaml  TEST_SSFP_533_TR2.8_FA35_FOV2_K2_thick8_dt20.yaml
sequences_ssfp/: TR10_FA30.yaml  TR2.0_FA120_FOV200_K64.yaml  TR2.0_FA120_FOV64_K64.yaml  TR2.0_FA20_FOV200_K64.yaml  TR2.0_FA30_FOV32_K64.yaml  TR2.0_FA60_FOV200_K64.yaml  TR2.0_FA90_FOV200_K64.yaml  TR2.8_FA10.yaml  TR2.8_FA10_FOV1000_K128.yaml  TR2.8_FA10_FOV320_K128.yaml  TR2.8_FA10_FOV320_K64.yaml  TR2.8_FA10_FOV320_K64_center_first.yaml  TR2.8_FA10_FOV500_K128.yaml  TR2.8_FA15.yaml  TR2.8_FA20.yaml  TR2.8_FA20_FOV500_K64.yaml  TR2.8_FA20_FOV500_K64_center_first.yaml  TR2.8_FA30.yaml  TR2.8_FA30_FOV330_K128.yaml  TR2.8_FA30_FOV500_K128.yaml  TR2.8_FA35_FOV256_K64_thick8.yaml  TR2.8_FA35_FOV256_K64_thick8_Gz.yaml  TR2.8_FA35_FOV256_K64_thick8_center_first.yaml  TR2.8_FA35_FOV2_K2_thick8.yaml  TR2.8_FA5.yaml  TR2.8_FA50_FOV330_K128.yaml  TR2.8_FA5_FOV1000_K128.yaml  TR2.8_FA90_FOV500_K64.yaml  TR2.8_FA90_FOV500_K64_center_first.yaml  TR3.0_FA90_FOV500_K64.yaml  TR3.0_FA90_FOV500_K64_center_first.yaml  TR3_FA5.yaml  TR5_FA30.yaml
src/: CMakeLists.txt  main.cpp
src/BlochSim/: BlochSim.cpp  BlochSim.h  CMakeLists.txt
src/FlowPhantom/: CMakeLists.txt  FlowPhantom.cpp  FlowPhantom.h
src/M_voxel/: CMakeLists.txt  M_voxel.cpp  M_voxel.h
src/SeqLoader/: CMakeLists.txt  SeqLoader.cpp  SeqLoader.h
src/SeqSimulator/: CMakeLists.txt  SeqSimulator.cpp  SeqSimulator.h
test/: CMakeLists.txt  test_BlochSim.cpp  test_FlowPhantom.cpp  test_bSSFP.cpp  test_libtorch.cpp  test_matplotlib.cpp  test_opencv.cpp  test_yaml.cpp
